minitrace-macro/tests/trace/ui/err/019-has-duplicate-enter_on_poll.rs
use minitrace::trace;

#[trace(enter_on_poll = true, enter_on_poll = false)]
fn f(a: u32) -> u32 {
    a
}

fn main() {
    f(1);
}
